Fixed contrast issues

--- a/lesson3/styles/base.css
+++ b/lesson3/styles/base.css
@@ -41,7 +41,7 @@ nav li {
 }
 
 nav a {
-    color: #028a0f;
+    color: #025f0b;
     text-decoration: none;
     display: block;
     text-align: center;
@@ -82,7 +82,7 @@ main h2 {
 }
 
 .home-icon {
-    color: #028a0f;
+    color: #025f0b;
     margin: 20px 0;
 }
 
@@ -128,7 +128,7 @@ h5 {
 }
 
 #color3 {
-    background-color: #028a0f;
+    background-color: #025f0b;
     color: #fffff0;
 }
 
